[リポジトリ登録]React関連ファイルを追加

--- a/src/laravel-othello/.gitignore
+++ b/src/laravel-othello/.gitignore
@@ -1,6 +1,9 @@
 /node_modules
 /public/hot
 /public/storage
+/public/js/react
+/resources/react/node_modules
+/resources/react/package-lock.json
 /storage/*.key
 /vendor
 /.idea
